--- a/1-blog/index.html
+++ b/1-blog/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
 </head>
 <body>
+    <!--Здесь будет навигация-->
+    <ul>
+        <li>В</li>
+        <li>Мой блог</li>
+    </ul>
+    <ul>
+        <li>HTML и CSS</li>
+        <li>Frontend</li>
+        <li>Backend</li>
+    </ul>
+    <p>FRONTEND 12 мая 2024</p>
+
+    <h1>Теория цвета - Как цвет влияет на поведение потребителей</h1>
+    <img src="https://s3-alpha-sig.figma.com/img/56d2/936d/debdc3f275a19554e34f56b7ae22bd8b?Expires=1742774400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=TZRgjofS-GhZcQDCJM7mJtFrWQ4Mjdtdiy4TMxhJyrorxVSlWi-ne4HMqkG~N0XjSxbvzg5hIDPs88jVS9KVjq~pW5A9xMP6XiCDuK6XP0ZteX1oIljaRhkB7QITMct8zYJo7yPAKwhAZVAU7~clJ1y~n-9Sim2ITbPgLhdfiOm~mWTftnfc5m3~TEZ7~8-FtDDmrazgfUfECD0KzudGdW2OpwhzhiwDFgrV6UUwMCh2ZJuVQqTIhJ4UtnqPiqW4I8UHKrVrduWVLH8stxhPjY5MfvFVVcAQV30cHwm1K-7CK-qZmzau7uXrbjUHcShL1H3wqlhAnLn1Tsjru9tLQQ__" alt="Photo">
+    <p>Наталья Васильева Разработчик</p>
+
+    <img src="https://s3-alpha-sig.figma.com/img/8cef/a35e/4f3f91ff718dae25d01f84692996a2cd?Expires=1742774400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=GzuhSUGa8erDZffvT20rVLMM8CExaByeSCsRFISgOtNxRcHmyTK0pUsf6gTbMmyLULbalMkRBmgrHrk2nK9vkcXG0m3~trcM2qiYN~OR4FuCXniZxsNqoqE1caNupCiCnLZoC4VeMyU1ycm4jvCETRqdcvBi9SWs4HTNAx3dqN0nxJzVG1jVnvjc0NbqMWAmrtcquNgont5NUDuYxZtRG~T5bSFCrdUEkuRWdgDUl8hO3~SftFUKAk9tw0V4fFIItURjZp3rrZIzca6rMh-HVATQBOYqeP94OrTv4PHe-fXt8bSyS5kLZntri8eVvGRHCICbUA87oIzrQWK5Y26SNw__" alt="Color">
     
+    <p>Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их
+    комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо
+    знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать
+    положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.</p>
+    
+    <p>Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая
+    реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния
+    цветов на поведение пользователей.</p>
+
+    <p>В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing) говорится, что использование разных цветов
+    может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в
+    зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цветt.</p>
+
+    <p>Все права защищены (c) 2024</p>
 </body>
 </html>
