--- a/1-blog/index.html
+++ b/1-blog/index.html
@@ -9,18 +9,18 @@
     <!--Здесь будет навигация-->
     <ul>
         <li>В</li>
-        <li>Мой блог</li>
+        <li><a href="#">Мой блог</a></li>
     </ul>
     <ul>
-        <li>HTML и CSS</li>
-        <li>Frontend</li>
-        <li>Backend</li>
+        <li><a href="#">HTML и CSS</a></li>
+        <li><a href="#">Frontend</a></li>
+        <li><a href="#">Backend</a></li>
         Поиск
     </ul>
     <p>FRONTEND 12 мая 2024</p>
 
     <h1>Теория цвета - Как цвет влияет на поведение потребителей</h1>
-    <img src="https://s3-alpha-sig.figma.com/img/56d2/936d/debdc3f275a19554e34f56b7ae22bd8b?Expires=1742774400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=TZRgjofS-GhZcQDCJM7mJtFrWQ4Mjdtdiy4TMxhJyrorxVSlWi-ne4HMqkG~N0XjSxbvzg5hIDPs88jVS9KVjq~pW5A9xMP6XiCDuK6XP0ZteX1oIljaRhkB7QITMct8zYJo7yPAKwhAZVAU7~clJ1y~n-9Sim2ITbPgLhdfiOm~mWTftnfc5m3~TEZ7~8-FtDDmrazgfUfECD0KzudGdW2OpwhzhiwDFgrV6UUwMCh2ZJuVQqTIhJ4UtnqPiqW4I8UHKrVrduWVLH8stxhPjY5MfvFVVcAQV30cHwm1K-7CK-qZmzau7uXrbjUHcShL1H3wqlhAnLn1Tsjru9tLQQ__" alt="Photo">
+    <img src="./images/debdc3f275a19554e34f56b7ae22bd8b.png" alt="Photo">
     <p>Наталья Васильева <br> Разработчик</p>
 
     <img src="./images/4f3f91ff718dae25d01f84692996a2cd.png" alt="Color">
